# fast-reachability

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  bench.cpp  bench.hpp  bit_permutations.hpp  block.hpp  board.hpp  build_n_test.sh  main.cpp  search.hpp  stme.hpp  utils.hpp
include/: simd
include/bits/: arm_detail.h  detail.h  detail_bitmask.h  flags.h  fwddecl.h  interleave.h  iota.h  loadstore.h  mask_reductions.h  permute.h  power_detail.h  simd.h  simd_abi.h  simd_alg.h  simd_bit.h  simd_builtin.h  simd_chunk.h  simd_config.h  simd_converter.h  simd_generic.h  simd_iterator.h  simd_mask.h  simd_math.h  simd_meta.h  simd_reductions.h  simd_scalar.h  simd_x86.h  vec_detail.h  x86_detail.h
